--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,7 @@
-﻿theme: jekyll-theme-midnight
-title: Ollama Pulse
+﻿title: Ollama Pulse
 description: Daily synthesis of the Ollama ecosystem
 show_downloads: false
+markdown: kramdown
+sass:
+  sass_dir: _sass
+  style: compressed
