--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -28,7 +28,15 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: CI Smoke Check - Validate Ollama API
+        env:
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
+        run: |
+          python scripts/ci_smoke_check.py
+
       - name: Run ingestion (all 10 sources)
+        env:
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
         run: |
           python scripts/ingest_official.py
           python scripts/ingest_cloud.py
@@ -39,9 +47,13 @@ jobs:
           python scripts/ingest_nostr.py
 
       - name: Aggregate data
+        env:
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
         run: python scripts/aggregate.py
 
       - name: Mine insights
+        env:
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
         run: python scripts/mine_insights.py
 
       - name: Commit and push data changes
@@ -81,6 +93,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Fetch Ollama Cloud Details
+        env:
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
         run: python scripts/ingest_cloud.py --filter=turbo --depth=full
         continue-on-error: true
 
