feat: add 6 new data sources + manual project tracking
NEW DATA SOURCES (11-16):
- Stack Overflow: Ollama Q&A and technical discussions
- Model Registry: Track models from ollama.com/library
- GitHub Releases: Official Ollama version releases
- Dev Blogs: Tutorials from Dev.to, Hashnode, Medium
- Discord: Placeholder for future Discord integration
- Manual Tracking: User-editable tracked_projects.json

MANUAL TRACKING SYSTEM:
- Simple JSON file for adding projects manually
- No code changes needed - just edit tracked_projects.json
- Auto-included in daily reports
- Full guide in MANUAL_TRACKING_GUIDE.md

TOTAL: 16 data sources (was 10, now 16)
- 15 automated sources
- 1 manual tracking system

All sources integrated into aggregate.py and ingest.yml workflow

--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           python scripts/ci_smoke_check.py
 
-      - name: Run ingestion (all 10 sources)
+      - name: Run ingestion (all 16 sources)
         env:
           OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
         run: |
@@ -45,6 +45,12 @@ jobs:
           python scripts/ingest_tools.py
           python scripts/ingest_bounties.py
           python scripts/ingest_nostr.py
+          python scripts/ingest_stackoverflow.py
+          python scripts/ingest_model_registry.py
+          python scripts/ingest_releases.py
+          python scripts/ingest_devblogs.py
+          python scripts/ingest_discord.py
+          python scripts/ingest_manual.py
 
       - name: Aggregate data
         env:
