fix: remove non-existent olmotrace package from requirements
- olmotrace does not exist on PyPI and was causing install failures
- Keep datasets for data processing
- This should fix the 80+ failed ingestion runs

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,5 @@ langchain-ollama>=0.1.2
 langchain-core>=0.3.1
 langchain-community>=0.2.5
 
-# OLMoTrace for traceability
-olmotrace>=0.2.1
+# Datasets for data processing
 datasets>=2.14.0
